--- a/src/config/tasks/toy.yaml
+++ b/src/config/tasks/toy.yaml
@@ -10,7 +10,7 @@ train_tasks_data_quality: {
     "3m": "medium",
 }
 
-test_tasks: ["3m", "4m", "5m"]
+test_tasks: ["3m", "8m"]
 test_tasks_data_quality: {
 }
 
